fixed a deprecated reflective call.